# prediction-market-analytics

./: AGENTS.md  CLAUDE.md  README.md  TODO_FLOW_IMPROVEMENTS.md  check_agents.py  requirements.txt
omnitrade/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
omnitrade/omnitrade/: __init__.py
omnitrade/omnitrade/backtest/: data_loader.py  engine.py  mm_engine.py
omnitrade/omnitrade/bots/: __init__.py  copy_trading.md  copy_trading.py  cross_exchange.md  cross_exchange.py  directional.md  directional.py  market_making.md  market_making.py
omnitrade/omnitrade/components/: __init__.py  executors.py  exit_strategies.py  hedge_signals.py  inventory.py  market_selectors.py  order_lifecycle.py  quote_engines.py  signals.py  sizers.py
omnitrade/omnitrade/core/: __init__.py  config.py  enums.py  errors.py  models.py  shutdown.py  validation.py
omnitrade/omnitrade/exchanges/: auth_retry.py  base.py  registry.py
omnitrade/omnitrade/monitoring/: __init__.py  alerts.py  collector.py  server.py
omnitrade/omnitrade/risk/: __init__.py  coordinator.py  safety.py
omnitrade/omnitrade/storage/: base.py  sqlite.py
omnitrade/omnitrade/utils/: logging.py  rate_limiter.py
omnitrade/scripts/: backtest.py  run_bot.py  test_connectivity.py
omnitrade/tests/: conftest.py  test_config_validation.py  test_logging.py  test_shutdown.py  test_storage.py  test_strategy_docs.py
omnitrade/tests/backtest/: test_data_loader.py
omnitrade/tests/bots/: test_copy_trading.py  test_directional.py  test_market_making.py
(+130 files in other folders)
